--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="LunchCheck">
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,11 +11,11 @@
     <script src="js/app.js"></script>	
   </head>
 <body>
-   <div class="container">
+   <div class="container" ng-controller='LunchCheckController'>
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
-             <input id="lunch-menu" type="text"
+             <input id="lunch-menu" type="text" ng-model="dishes"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control">
          </div>
