--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
              class="form-control">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="checkIfTooMuch()">Check If Too Much</button>
+			 <p>Too much: {{tooMuch}}</p>
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
