--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkIfTooMuch()">Check If Too Much</button>
-			 <p>{{showMessage}}</p>
+			 <div ng-model="showMessage"></div>
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
