--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkIfTooMuch()">Check If Too Much</button>
-			 <div ng-model="showThisMsg"></div>
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
+		   {{showThisMsg}}
          </div>
    </div>
 
